# hexlet_tg_bot_tutorial_template

./: .gitignore  env_example  pyproject.toml
alembic/: env.py
alembic/versions/: 5aa8d121f3a8_init_migration.py
shop_bot/: config.py  db.py  errors.py  main.py  models_registry.py  utils.py
shop_bot/admin/: errors.py  fsm.py  middleware.py  models.py  repo.py  routes.py  service.py  views.py
shop_bot/scripts/: add_admin.py  run_bot.py
shop_bot/shop/: dto.py  errors.py  models.py  repo.py  routes.py  service.py  views.py
